<resources>


    <string name="app_name">Farm Bandi</string>
    <string name="welcome_to">Welcome to</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="Continue">Continue</string>
    <string name="verify">Verify</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_phone">Enter Phone Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="change_phone_number"><u>Change Phone Number</u></string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="please_enter_otp">Enter 6 digit OTP Code</string>
    <string name="enter_valid_otp_code">Please enter valid OTP (6 digit code)</string>
    <string name="please_enter_mobile_number">Enter your mobile number</string>
    <string name="invalid_mobile_number">Entered number is invalid</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_provide_us_with_few_more_details">Please provide us with few more details</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="dob">DOB</string>
    <string name="upload_profile_image">UPLOAD PROFILE IMAGE</string>
    <string name="mobile">MOBILE</string>
    <string name="email_id">EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="upload_aadhar_front">UPLOAD AADHAR FRONT</string>
    <string name="upload_aadhar_back">UPLOAD AADHAR BACK</string>
    <string name="upload_driver_license_front">UPLOAD DRIVER LICENSE FRONT</string>
    <string name="upload_driving_license_back">UPLOAD DRIVING LICENSE BACK</string>
    <string name="select_city">SELECT CITY</string>
    <string name="Register">Register</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="job_list">Job list!</string>
    <string name="upcoming_jobs">Upcoming</string>
    <string name="ongoing_jobs">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="track_order">Tracking Order</string>
    <string name="please_select_few_more_details">Please select few more details</string>
    <string name="tack_me_always">Tack me always</string>
    <string name="my_destination_input">My destination input</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="pick_order">Pick Order</string>
    <string name="locations">Locations</string>
    <string name="from">FROM</string>
    <string name="to">To</string>
    <string name="profile">Profile</string>
    <string name="my_jobs">My Jobs</string>
    <string name="management">Management</string>
    <string name="notifications">Notifications</string>
    <string name="my_information">My Information</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="city">CITY</string>
    <string name="something_went_wrong_retry">Something went wrong!! Retry</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="approved">approved</string>
    <string name="login_with_other_account"><u>Login with Other Account</u></string>
    <string name="select_state">SELECT STATE</string>
    <string name="email_required">Email is Required</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="first_name_required">Please enter first name</string>
    <string name="dob_required">Select Date of Birth</string>
    <string name="profile_required">Please upload profile pic</string>
    <string name="adhar_front_required">Upload your Aadhar card front side</string>
    <string name="adhar_back_required">Upload your Aadhar card back side</string>
    <string name="dl_front_required">Upload your Driver licence front side</string>
    <string name="dl_back_required">Upload your Driver licence back side</string>
    <string name="state_required">Please choose your State</string>
    <string name="city_required">Please choose your City</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="invalid_password_min_8_char">Invalid password (Min 8 char)</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">gender</string>
    <string name="login_with_password"><u>Login with Password</u></string>
    <string name="sign_in">Sign In</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="job_related_settings">Job Settings</string>
    <string name="job_settings">Job settings</string>
    <string name="time">Time</string>
    <string name="Return">Return</string>
    <string name="start">Start</string>
    <string name="order_details">Order details</string>
    <string name="order_id">ORDER ID</string>
    <string name="contact">CONTACT</string>
    <string name="product_weight">PRODUCT WEIGHT</string>
    <string name="drop_location">DROP LOCATION</string>
    <string name="pickup_location">PICKUP LOCATION</string>
    <string name="no_completed_job_yet">Looks like you haven\'t completed any Job </string>
    <string name="no_completed_job">Couldn\'t complete any job</string>
    <string name="no_ongoing_job_yet">Looks like you are not doing any Job </string>
    <string name="no_ongoing_job">No ongoing job</string>
    <string name="no_upcoming_job_yet">Looks like you haven\'t assigned any Job </string>
    <string name="no_upcoming_job">No job assigned</string>
    <string name="you_will_have_to_give_permission_for_fetching_current_location">You will have to give permission for fetching current location...</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure, You want to exit!</string>
    <string name="confirm_exit">Confirm Exit..!!</string>


</resources>