<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.application.farmbandi.R" />

        <variable
            name="isJobsAsPerUserInput"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        tools:context=".Activities.JobSettings.JobSettingsActivity">


        <ImageView
            android:id="@+id/imgBack"
            style="@style/Style_RippleEffect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBack">


            <TextView
                style="@style/Style_bold_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/job_settings"
                android:textSize="19sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/color_theme_5"
                app:strokeWidth="0.8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <TextView
                        style="@style/Style_medium_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track_order"
                        android:textSize="17sp" />


                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabOrderType"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_unselected_tab"
                        app:tabBackground="@drawable/tab_color_selector"
                        app:tabIndicatorHeight="0dp"
                        app:tabSelectedTextColor="@color/color_theme_100"
                        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">


                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabTrackMeAlways"
                            style="@style/Style_regular_font"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tack_me_always" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/trackForSpecificTime"
                            style="@style/Style_regular_font"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/my_destination_input" />

                    </com.google.android.material.tabs.TabLayout>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        app:animatedVisibility="@{isJobsAsPerUserInput}"
                        app:animationId="@{R.anim.anim_slide_in_right}"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/color_theme_100"
                        app:strokeWidth="0.8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="15dp">


                            <TextView
                                style="@style/Style_medium_font"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/locations"
                                android:textSize="18sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/bg_input_field"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="match_parent"
                                        android:padding="10dp"
                                        android:src="@drawable/ic_vector" />

                                    <TextView
                                        android:layout_width="1dp"
                                        android:layout_height="match_parent"
                                        android:background="@color/color_theme_100" />

                                    <com.google.android.material.textfield.TextInputLayout
                                        android:id="@+id/edtFromLayout"
                                        style="@style/Style_TextTextInputLayout"
                                        android:layout_width="0dp"
                                        android:layout_height="50dp"
                                        android:layout_weight="1"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <EditText
                                            android:id="@+id/edtFrom"
                                            style="@style/style_editText"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/transparent"
                                            android:clickable="false"
                                            android:focusable="false"
                                            android:hint="@string/from" />

                                    </com.google.android.material.textfield.TextInputLayout>


                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="match_parent"
                                        android:padding="10dp"
                                        android:src="@drawable/ic_down_arrow" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/bg_input_field"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="match_parent"
                                        android:padding="10dp"
                                        android:src="@drawable/ic_vector" />

                                    <TextView
                                        android:layout_width="1dp"
                                        android:layout_height="match_parent"
                                        android:background="@color/color_theme_100" />

                                    <com.google.android.material.textfield.TextInputLayout
                                        android:id="@+id/edtToLayout"
                                        style="@style/Style_TextTextInputLayout"
                                        android:layout_width="0dp"
                                        android:layout_height="50dp"
                                        android:layout_weight="1"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <EditText
                                            android:id="@+id/edtTo"
                                            style="@style/style_editText"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/transparent"
                                            android:clickable="false"
                                            android:focusable="false"
                                            android:hint="@string/to" />

                                    </com.google.android.material.textfield.TextInputLayout>


                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="match_parent"
                                        android:padding="10dp"
                                        android:src="@drawable/ic_down_arrow" />

                                </LinearLayout>


                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        app:animatedVisibility="@{isJobsAsPerUserInput}"
                        app:animationId="@{R.anim.anim_slide_in_right}"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/color_theme_100"
                        app:strokeWidth="0.8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="15dp">


                            <TextView
                                style="@style/Style_medium_font"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/time"
                                android:textSize="18sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">


                                <LinearLayout
                                    android:id="@+id/llStartTime"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="10dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/bg_input_field"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="match_parent"
                                        android:padding="10dp"
                                        android:src="@drawable/ic_time" />

                                    <TextView
                                        android:layout_width="1dp"
                                        android:layout_height="match_parent"
                                        android:background="@color/color_theme_100" />

                                    <com.google.android.material.textfield.TextInputLayout
                                        android:id="@+id/edtGoingTimeLayout"
                                        style="@style/Style_TextTextInputLayout"
                                        android:layout_width="0dp"
                                        android:layout_height="50dp"
                                        android:layout_weight="1"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <EditText
                                            android:id="@+id/edtGoingTime"
                                            style="@style/style_editText"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/transparent"
                                            android:clickable="false"
                                            android:textColor="@color/color_theme_100"
                                            android:focusable="false"
                                            android:hint="@string/start" />

                                    </com.google.android.material.textfield.TextInputLayout>


                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/llReturnTime"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/bg_input_field"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="match_parent"
                                        android:padding="10dp"
                                        android:src="@drawable/ic_time" />

                                    <TextView
                                        android:layout_width="1dp"
                                        android:layout_height="match_parent"
                                        android:background="@color/color_theme_100" />

                                    <com.google.android.material.textfield.TextInputLayout
                                        android:id="@+id/edtComingTimeLayout"
                                        style="@style/Style_TextTextInputLayout"
                                        android:layout_width="0dp"
                                        android:layout_height="50dp"
                                        android:layout_weight="1"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <EditText
                                            android:id="@+id/edtComingTime"
                                            style="@style/style_editText"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:textColor="@color/color_theme_100"
                                            android:background="@color/transparent"
                                            android:clickable="false"
                                            android:focusable="false"
                                            android:hint="@string/Return" />

                                    </com.google.android.material.textfield.TextInputLayout>


                                </LinearLayout>


                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>