<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="countDown"
            type="String" />

        <variable
            name="showOtpScreen"
            type="Boolean" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMobileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:visibility="@{showOtpScreen?View.GONE:View.VISIBLE}">

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/Style_medium_font"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_phone"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/llNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/bg_input_field"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTitle">

                    <TextView
                        style="@style/Style_bold_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableStart="@drawable/ic_india_flag"
                        android:drawablePadding="10dp"
                        android:padding="11dp"
                        android:text="+91" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="7dp"
                        android:background="@color/color_gray_100" />

                    <EditText
                        android:id="@+id/edtNumber"
                        style="@style/StyleInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="XXX-XXXX-XX"
                        android:inputType="number"
                        android:maxLength="10" />

                </LinearLayout>




            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clOTPInput"
                android:visibility="@{showOtpScreen?View.VISIBLE:View.GONE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txtBack"
                    style="@style/Style_NormalRippleEffect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:text="@string/change_phone_number"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/ic_back" />


                <TextView
                    android:id="@+id/txtTitle1"
                    style="@style/Style_bold_font"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/confirm_otp"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtBack" />

                <TextView
                    android:id="@+id/txtOtpEnter"
                    style="@style/Style_regular_font"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTitle1" />

                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:bar_height="2dp"
                    app:height="55dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtOtpEnter"
                    app:length="6"
                    app:otp_box_background="@drawable/bg_otp_box"
                    app:otp_box_background_active="@drawable/bg_active_otp_box"
                    app:otp_box_background_error="@drawable/bg_error_otp_box"
                    app:otp_box_background_inactive="@drawable/bg_otp_box"
                    app:otp_box_background_success="@drawable/bg_success_otp_box"
                    app:otp_text_size="24dp" />


                <LinearLayout
                    android:id="@+id/llResendOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/otp_view">

                    <TextView
                        android:id="@+id/imgSandTimer"
                        android:text="@string/didn_t_receive_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:id="@+id/txtCountDown"
                        android:fontFamily="@font/medium"
                        style="@style/Style_NormalRippleEffect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:saveEnabled="@{countDown==@string/resend_otp}"
                        android:clickable="@{countDown==@string/resend_otp}"
                        android:text="@{countDown}"
                        android:textColor="@{countDown==@string/resend_otp?@color/color_blue_100:@color/black}" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <include
                android:id="@+id/llContinueBtn"
                layout="@layout/layout_common_button"
                android:isProgress="@{isLoading}"
                android:isDisabled="@{isLoading}"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:btnText="@{showOtpScreen?@string/verify:@string/Continue}" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/txtLoginWithPassword"
                style="@style/Style_NormalRippleEffect"
                android:textColor="@color/color_theme_100"
                android:fontFamily="@font/medium"
                android:visibility="@{showOtpScreen?View.GONE:View.VISIBLE}"
                android:text="@string/login_with_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>
    </LinearLayout>
</layout>